Bug 1700870 - Explicitly convert path to UTF-8. r=application-update-reviewers,bytesized

nsPrintfCString %S converts from UTF-16 to the ANSI code page, but we rely on the output string being UTF-8.

Differential Revision: https://phabricator.services.mozilla.com/D110355