toolkit/xre/MultiInstanceLock.cpp
@@ -40,8 +40,9 @@ static bool GetLockFileName(const char* nameToken, const char16_t* installPath,
   mozilla::UniquePtr<wchar_t, CoTaskMemFreeDeleter> programDataPathUnique(
       programDataPath);
 
-  filePath = nsPrintfCString("%S\\%s\\%s-%S", programDataPath, MOZ_APP_VENDOR,
-                             nameToken, pathHash.get());
+  filePath = nsPrintfCString(
+      "%s\\%s\\%s-%s", NS_ConvertUTF16toUTF8(programDataPath).get(),
+      MOZ_APP_VENDOR, nameToken, NS_ConvertUTF16toUTF8(pathHash.get()).get());
 
 #else
   // On POSIX platforms the base path is /tmp/[vendor][nameToken]-[pathHash].
@@ -56,7 +57,9 @@ static bool GetLockFileName(const char* nameToken, const char16_t* installPath,
 MultiInstLockHandle OpenMultiInstanceLock(const char* nameToken,
                                           const char16_t* installPath) {
   nsCString filePath;
-  GetLockFileName(nameToken, installPath, filePath);
+  if (!GetLockFileName(nameToken, installPath, filePath)) {
+    return MULTI_INSTANCE_LOCK_HANDLE_ERROR;
+  }
 
   // Open a file handle with full privileges and sharing, and then attempt to
   // take a shared (nonexclusive, read-only) lock on it.
